# homework29

./: .gitignore  README.md  pyproject.toml  pytests.ini
ads/: asgi.py  settings.py  urls.py  wsgi.py
advertisements/: apps.py  models.py  serializers.py  urls.py  views.py
advertisements/migrations/: 0001_initial.py  0002_initial.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_slug.py
datasets/: ad.csv  category.csv  locs.csv  user.csv
fixtures/: ad.json  category.json  location.json  locations.json  locs.json  user.json
selections/: models.py  serializers.py  urls.py  views.py
selections/migrations/: 0001_initial.py  0002_alter_selection_options.py  0002_initial.py
tests/: conftest.py  factories.py  fixtures.py  test_sample.py
tests/advertisements/: advertisement_create_test.py  advertisements_get_advertisement_test.py  advertisements_get_list_test.py
tests/selections/: selection_create_test.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0002_alter_user_groups_alter_user_location_and_more.py  0003_alter_location_lat_alter_location_lng.py  0003_alter_user_birth_date.py
utils/: utils.py
